--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.19",
     "pg": "^8.16.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0"
   }
 }
